dtos cliente, empleado, dias de atencion